syntax = "proto3";

package kv;

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutResponse {}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {}

message KvOpRequest {
  oneof request {
    GetRequest get = 1;
    PutRequest put = 2;
    DeleteRequest delete = 3;
  }
}

message KvOpResponse {
  oneof response {
    GetResponse get = 1;
    PutResponse put = 2;
    DeleteResponse delete = 3;
  }
}

message TxnRequest {
  repeated KvOpRequest ops = 1;
}

message TxnResponse {
  repeated KvOpResponse ops = 1;
}

service KvService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Put(PutRequest) returns (PutResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Txn(TxnRequest) returns (TxnResponse);
}
